@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.19
 
+	- "lpq -P" would segfault instead of showing a usage
+	  message (STR #94)
 	- Fixed compiler warnings in pdftops filter (STR #96)
 
 
